# LLMRouting

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  ncurses_wrapper.c  ollama_client.c  ollama_json.c
src/include/: ncurses_wrapper.h  ollama_client.h  ollama_json.h
